add the -vt/--virtual-threads option to use virtual threads